--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "version": "0.0.1",
 
   "scripts": {
+    "test": "node node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha \"./test/mocha/*.js\" && npm run coveralls",
+    "coveralls": "node node_modules/coveralls/bin/coveralls.js < coverage/lcov.info",
+    "localTest": "node node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha \"./test/mocha/*.js\""
   },
 
   "engines" : {
@@ -15,10 +18,13 @@
   "dependencies": {
     "ezlog": "0.0.12",
     "opensoars_cls": "0.0.8",
-    "express": "*"
+    "express": "4.9.8"
   },
 
   "devDependencies": {
+    "mocha": "*",
+    "istanbul": "*",
+    "coveralls": "*"
   },
 
   "repository": {
