--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "tt",
+  "name": "poll",
 
-  "description": "Test Travis",
+  "description": "Poll",
 
-  "version": "0.0.1",
+  "version": "0.0.2",
 
   "scripts": {
     "test": "node node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha \"./test/mocha/*.js\" && npm run coveralls",
@@ -29,7 +29,7 @@
 
   "repository": {
     "type": "git",
-    "url": "https://github.com/opensoars/tt"
+    "url": "hpollps://github.com/opensoars/poll"
   },
 
   "readmeFilename": "README.md"
