--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 
   "scripts": {
     "test": "node node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha \"./test/mocha/*.js\" && npm run coveralls",
+    "server": "node server.js",
     "coveralls": "node node_modules/coveralls/bin/coveralls.js < coverage/lcov.info",
     "localTest": "node node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha \"./test/mocha/*.js\""
   },
